EXTRA/Proj1-3/ProgramParser.java
// Generated from Program.g4 by ANTLR 4.8

import java.util.*;
import java.util.HashMap; 
import java.util.Map; 
import java.util.Set;
import java.util.Iterator;
import java.lang.Math; 


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProgramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, CO1=26, CO2=27, PARO=28, PARC=29, PO=30, DD=31, SEMC=32, ID=33, 
		INT=34, FLOAT=35, WS=36;
	public static final int
		RULE_start = 0, RULE_statements = 1, RULE_progI = 2, RULE_varDef2 = 3, 
		RULE_comment = 4, RULE_main_p = 5, RULE_sExprM = 6, RULE_varWork = 7, 
		RULE_wrT = 8, RULE_ifelse = 9, RULE_sExprI = 10, RULE_wrT2 = 11, RULE_varWork2 = 12, 
		RULE_cond = 13, RULE_exprW = 14, RULE_exprR = 15, RULE_exprS = 16, RULE_exprI = 17, 
		RULE_expr = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "statements", "progI", "varDef2", "comment", "main_p", "sExprM", 
			"varWork", "wrT", "ifelse", "sExprI", "wrT2", "varWork2", "cond", "exprW", 
			"exprR", "exprS", "exprI", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "':'", "'begin'", "'end.'", "'TRUE'", "'FALSE'", "'true'", 
			"'false'", "'writeln'", "'readln'", "'if'", "'then'", "'else'", "'='", 
			"'+'", "'''", "','", "'Sqrt'", "'Cos'", "'Sin'", "'ln'", "'dopower'", 
			"'/'", "'*'", "'-'", null, null, "'('", "')'", "'program'", "':='", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "CO1", "CO2", "PARO", "PARC", "PO", "DD", "SEMC", "ID", "INT", 
			"FLOAT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Program.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	Double count= 0.0;
	Boolean truth = true;
	HashMap<String, Double> Vt = new HashMap<String, Double>();
	HashMap<String,  Boolean> Vb =new HashMap<>();
	Scanner myObj = new Scanner(System.in);
	Boolean happen = true;

	public ProgramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ProgramParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			statements();
			setState(39);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public ProgIContext progI() {
			return getRuleContext(ProgIContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public VarDef2Context varDef2() {
			return getRuleContext(VarDef2Context.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public Main_pContext main_p() {
			return getRuleContext(Main_pContext.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		try {
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case PO:
				enterOuterAlt(_localctx, 2);
				{
				setState(42);
				progI();
				setState(43);
				statements();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 3);
				{
				setState(45);
				match(T__0);
				setState(46);
				varDef2();
				setState(47);
				statements();
				}
				break;
			case CO1:
				enterOuterAlt(_localctx, 4);
				{
				setState(49);
				comment();
				setState(50);
				statements();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 5);
				{
				setState(52);
				main_p();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgIContext extends ParserRuleContext {
		public TerminalNode PO() { return getToken(ProgramParser.PO, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMC() { return getToken(ProgramParser.SEMC, 0); }
		public ProgIContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_progI; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterProgI(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitProgI(this);
		}
	}

	public final ProgIContext progI() throws RecognitionException {
		ProgIContext _localctx = new ProgIContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_progI);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(PO);
			setState(56);
			expr(0);
			setState(57);
			match(SEMC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDef2Context extends ParserRuleContext {
		public ExprSContext exprS;
		public Token ID;
		public ExprSContext exprS() {
			return getRuleContext(ExprSContext.class,0);
		}
		public TerminalNode ID() { return getToken(ProgramParser.ID, 0); }
		public TerminalNode SEMC() { return getToken(ProgramParser.SEMC, 0); }
		public VarDef2Context varDef2() {
			return getRuleContext(VarDef2Context.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public VarDef2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDef2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterVarDef2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitVarDef2(this);
		}
	}

	public final VarDef2Context varDef2() throws RecognitionException {
		VarDef2Context _localctx = new VarDef2Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDef2);
		try {
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				((VarDef2Context)_localctx).exprS = exprS();
				setState(61);
				match(T__1);
				setState(62);
				((VarDef2Context)_localctx).ID = match(ID);
				setState(63);
				match(SEMC);

				                String ill = (((VarDef2Context)_localctx).ID!=null?((VarDef2Context)_localctx).ID.getText():null);
				                if(ill.equals("boolean"))
				                {Vb.put(((VarDef2Context)_localctx).exprS.i, truth);
				                System.out.println("B. " + ((VarDef2Context)_localctx).exprS.i + " " + ill);
				                }
				                else
				                {Vt.put(((VarDef2Context)_localctx).exprS.i, count);}
				                System.out.println("A. " + ((VarDef2Context)_localctx).exprS.i + " " + ill);
				            
				setState(65);
				varDef2();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(67);
				comment();
				setState(68);
				varDef2();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentContext extends ParserRuleContext {
		public TerminalNode CO1() { return getToken(ProgramParser.CO1, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode CO2() { return getToken(ProgramParser.CO2, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitComment(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_comment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(CO1);
			setState(73);
			expr(0);
			setState(74);
			match(CO2);
			System.out.println("Comment");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_pContext extends ParserRuleContext {
		public SExprMContext sExprM() {
			return getRuleContext(SExprMContext.class,0);
		}
		public Main_pContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_p; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterMain_p(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitMain_p(this);
		}
	}

	public final Main_pContext main_p() throws RecognitionException {
		Main_pContext _localctx = new Main_pContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_main_p);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__2);
			setState(78);
			sExprM();
			setState(79);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SExprMContext extends ParserRuleContext {
		public IfelseContext ifelse() {
			return getRuleContext(IfelseContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public SExprMContext sExprM() {
			return getRuleContext(SExprMContext.class,0);
		}
		public WrTContext wrT() {
			return getRuleContext(WrTContext.class,0);
		}
		public VarWorkContext varWork() {
			return getRuleContext(VarWorkContext.class,0);
		}
		public SExprMContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sExprM; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterSExprM(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitSExprM(this);
		}
	}

	public final SExprMContext sExprM() throws RecognitionException {
		SExprMContext _localctx = new SExprMContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sExprM);
		try {
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				ifelse();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				comment();
				setState(84);
				sExprM();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				wrT();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(87);
				varWork();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarWorkContext extends ParserRuleContext {
		public ExprSContext exprS;
		public Token e;
		public ExprIContext exprI;
		public ExprSContext exprS() {
			return getRuleContext(ExprSContext.class,0);
		}
		public TerminalNode DD() { return getToken(ProgramParser.DD, 0); }
		public TerminalNode SEMC() { return getToken(ProgramParser.SEMC, 0); }
		public SExprMContext sExprM() {
			return getRuleContext(SExprMContext.class,0);
		}
		public ExprIContext exprI() {
			return getRuleContext(ExprIContext.class,0);
		}
		public VarWorkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varWork; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterVarWork(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitVarWork(this);
		}
	}

	public final VarWorkContext varWork() throws RecognitionException {
		VarWorkContext _localctx = new VarWorkContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_varWork);
		int _la;
		try {
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				((VarWorkContext)_localctx).exprS = exprS();
				setState(92);
				match(DD);
				setState(93);
				((VarWorkContext)_localctx).e = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7))) != 0)) ) {
					((VarWorkContext)_localctx).e = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(94);
				match(SEMC);
				  System.out.println("This is B at B " + Vb.get(((VarWorkContext)_localctx).exprS.i));
				        String e2 = (((VarWorkContext)_localctx).e!=null?((VarWorkContext)_localctx).e.getText():null);
				        if(e2.equals("true"))
				        {
				            System.out.println("True happen");
				            Vb.replace(((VarWorkContext)_localctx).exprS.i, true);
				        }
				         if(e2.equals("TRUE"))
				        {
				            System.out.println("True happen");
				            Vb.replace(((VarWorkContext)_localctx).exprS.i, true);
				        }
				        if(e2.equals("false"))
				        {
				            System.out.println("True happen");
				            Vb.replace(((VarWorkContext)_localctx).exprS.i, false);
				        }
				        if(e2.equals("FALSE"))
				        {
				            System.out.println("True happen");
				            Vb.replace(((VarWorkContext)_localctx).exprS.i, false);
				        }
				        System.out.println("This is B at E " + Vb.get(((VarWorkContext)_localctx).exprS.i));
				        
				setState(96);
				sExprM();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(98);
				((VarWorkContext)_localctx).exprS = exprS();
				setState(99);
				match(DD);
				setState(100);
				((VarWorkContext)_localctx).exprI = exprI(0);
				{
				setState(101);
				match(SEMC);
				}

				         System.out.println("This is your map: " + Vt.get(((VarWorkContext)_localctx).exprS.i));
				        Vt.replace(((VarWorkContext)_localctx).exprS.i, ((VarWorkContext)_localctx).exprI.i);
				        System.out.println("This is your map: " + Vt.get(((VarWorkContext)_localctx).exprS.i));
				        
				setState(103);
				sExprM();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WrTContext extends ParserRuleContext {
		public ExprWContext exprW;
		public ExprRContext exprR;
		public TerminalNode PARO() { return getToken(ProgramParser.PARO, 0); }
		public ExprWContext exprW() {
			return getRuleContext(ExprWContext.class,0);
		}
		public TerminalNode PARC() { return getToken(ProgramParser.PARC, 0); }
		public TerminalNode SEMC() { return getToken(ProgramParser.SEMC, 0); }
		public SExprMContext sExprM() {
			return getRuleContext(SExprMContext.class,0);
		}
		public ExprRContext exprR() {
			return getRuleContext(ExprRContext.class,0);
		}
		public WrTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wrT; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterWrT(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitWrT(this);
		}
	}

	public final WrTContext wrT() throws RecognitionException {
		WrTContext _localctx = new WrTContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_wrT);
		try {
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				match(T__8);
				setState(109);
				match(PARO);
				setState(110);
				((WrTContext)_localctx).exprW = exprW(0);
				setState(111);
				match(PARC);
				setState(112);
				match(SEMC);
				 
				                System.out.println(((WrTContext)_localctx).exprW.i);
				            
				setState(114);
				sExprM();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				match(T__9);
				setState(117);
				match(PARO);
				setState(118);
				((WrTContext)_localctx).exprR = exprR(0);
				setState(119);
				match(PARC);
				setState(120);
				match(SEMC);
				System.out.println((((WrTContext)_localctx).exprR!=null?_input.getText(((WrTContext)_localctx).exprR.start,((WrTContext)_localctx).exprR.stop):null));
				setState(122);
				sExprM();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfelseContext extends ParserRuleContext {
		public CondContext e;
		public CondContext cond;
		public TerminalNode PARO() { return getToken(ProgramParser.PARO, 0); }
		public TerminalNode PARC() { return getToken(ProgramParser.PARC, 0); }
		public List<SExprIContext> sExprI() {
			return getRuleContexts(SExprIContext.class);
		}
		public SExprIContext sExprI(int i) {
			return getRuleContext(SExprIContext.class,i);
		}
		public TerminalNode SEMC() { return getToken(ProgramParser.SEMC, 0); }
		public SExprMContext sExprM() {
			return getRuleContext(SExprMContext.class,0);
		}
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public IfelseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifelse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterIfelse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitIfelse(this);
		}
	}

	public final IfelseContext ifelse() throws RecognitionException {
		IfelseContext _localctx = new IfelseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ifelse);
		int _la;
		try {
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				System.out.println("It activate");
				setState(128);
				match(T__10);
				setState(129);
				match(PARO);
				setState(130);
				((IfelseContext)_localctx).e = ((IfelseContext)_localctx).cond = cond();
				setState(131);
				match(PARC);
				setState(132);
				match(T__11);
				setState(133);
				sExprI(((IfelseContext)_localctx).cond.i);
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__12) {
					{
					setState(134);
					match(T__12);
					setState(135);
					sExprI(!((IfelseContext)_localctx).cond.i);
					}
				}

				setState(138);
				match(SEMC);
				System.out.println(((IfelseContext)_localctx).cond.i);
				    
				setState(140);
				sExprM();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
